Created a dummy util class to be tested as a project dependency in webapp project.

--- a/integ-web-app/build.gradle
+++ b/integ-web-app/build.gradle
@@ -5,6 +5,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':integ-util')
     compile 'org.apache.commons:commons-lang3:3.4'
     providedCompile 'javax:javaee-api:7.0'
 }
