--- a/integ-rest-web-app/build.gradle
+++ b/integ-rest-web-app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile project(':integ-util')
     compile 'org.apache.commons:commons-lang3:3.4'
     providedCompile 'javax:javaee-api:7.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
 
     def cargoVersion = '1.4.15'
     cargo "org.codehaus.cargo:cargo-ant:${cargoVersion}"
@@ -49,5 +51,9 @@ task deployToLocalServer(
         type: com.bmuschko.gradle.cargo.tasks.remote.CargoRedeployRemote,
         dependsOn: ['war']) {
 
-    println('deployToLocalServer')
+    println('Defined task deployToLocalServer')
 }
+
+task runMyTests(type: org.gradle.api.tasks.testing.Test, dependsOn: ['cleanTest', 'deployToLocalServer'])
+
+task repeatTests(type: org.gradle.api.tasks.testing.Test, dependsOn: ['cleanTest'])
