--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'integ-app'
 
-include 'integ-web-app', 'integ-util'
+include 'integ-util', 'integ-web-app', 'integ-rest-web-app'
 
