Implemented example 14_1 that integrates JAX-RS with EJB
1. This commit has setup that allows the application that handles EJB to co-exist with other applications.
   In this case, the EJB bean need to be registered in the Application class
   and the url pattern needs to be fully specified on the EJB interface class.

--- a/integ-rest-web-app/build.gradle
+++ b/integ-rest-web-app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     providedCompile 'javax:javaee-api:7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.apache.httpcomponents:httpclient:4.5'
+    providedCompile 'org.jboss.resteasy:resteasy-jaxrs:3.0.9.Final'
+    providedCompile 'org.jboss.resteasy:resteasy-jaxb-provider:3.0.9.Final'
+    providedCompile 'org.jboss.resteasy:resteasy-client:3.0.9.Final'
 
     def cargoVersion = '1.4.15'
     cargo "org.codehaus.cargo:cargo-ant:${cargoVersion}"
@@ -57,3 +60,7 @@ task deployToLocalServer(
 task runMyTests(type: org.gradle.api.tasks.testing.Test, dependsOn: ['cleanTest', 'deployToLocalServer'])
 
 task repeatTests(type: org.gradle.api.tasks.testing.Test, dependsOn: ['cleanTest'])
+
+task runEjbIntegTests(type : org.gradle.api.tasks.testing.Test, dependsOn : ['cleanTest', 'deployToLocalServer']) {
+    include '**/ex14_1/**'
+}
