--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,23 @@ version '1.0-SNAPSHOT'
 apply from: 'build_2.gradle'
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+subprojects {
+    group 'self.rks.integapp'
+    version '0.1-SNAPSHOT'
+
+    apply plugin: 'java'
+
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
+    }
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
+
