--- a/integ-util/build.gradle
+++ b/integ-util/build.gradle
@@ -3,3 +3,8 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    compile "commons-beanutils:commons-beanutils:1.9.2"
+    testCompile 'org.mockito:mockito-all:1.9.5'
+}
