Create a sub-project 'integ-java-experiments' to contain general java language and libraries experiments. The project may also contain experiments done using code provided with a book.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'integ-app'
 
-include 'integ-util', 'integ-web-app', 'integ-rest-web-app'
+include 'integ-java-experiments', 'integ-util', 'integ-web-app', 'integ-rest-web-app'
 
