Implemented sample code from reading chapter 1 in the book 'Learning Web Development with Bootstrap and AngularJS' published by Packt publications in 2015. Updated index.jsp to include a link to the developed page

--- a/integ-web-app/build.gradle
+++ b/integ-web-app/build.gradle
@@ -33,6 +33,11 @@ cargo {
     }
 }
 
+jettyRun  {
+    reload = "automatic"
+    scanIntervalSeconds = 5
+}
+
 dependencies {
     compile project(':integ-util')
     compile 'org.apache.commons:commons-lang3:3.4'
