--- a/others/OCMJ/build.gradle
+++ b/others/OCMJ/build.gradle
@@ -5,10 +5,22 @@ sourceCompatibility = 1.8
 
 mainClassName = 'jmodern.Main'
 
+configurations {
+    markdownDoclet
+}
+
 dependencies {
     compile 'com.google.guava:guava:18.0'
+    
+    markdownDoclet 'ch.raffael.pegdown-doclet:pegdown-doclet:1.1.1'
 }
 
 run {
     systemProperty 'jmodern.name', 'Jack'
+}
+
+javadoc.options {
+    docletpath = configurations.markdownDoclet.files.asType(List)
+    doclet = "ch.raffael.doclets.pegdown.PegdownDoclet"
+    addStringOption("parse-timeout", "10")
 }
