--- a/others/OCMJ/build.gradle
+++ b/others/OCMJ/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'jmodern.Main'
+mainClassName = 'jmodern.Main2'
 
 configurations {
     markdownDoclet
