Simple example to test default method in a interface and usage of an interface with a single abstract method as a functional interface.

--- a/others/OCMJ/build.gradle
+++ b/others/OCMJ/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'jmodern.Main2'
+mainClassName = 'jmodern.Main'
 
 configurations {
     markdownDoclet
