A simple example of using Fibers from Quasar core library where two fibers communicate via a channel

--- a/others/OCMJ/build.gradle
+++ b/others/OCMJ/build.gradle
@@ -3,20 +3,25 @@ apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'jmodern.Main'
+mainClassName = 'jmodern.Main3'
 
 configurations {
-    markdownDoclet
+    markdownDoclet    
+    quasar
 }
 
 dependencies {
     compile 'com.google.guava:guava:18.0'
     
     markdownDoclet 'ch.raffael.pegdown-doclet:pegdown-doclet:1.1.1'
+    
+    compile "co.paralleluniverse:quasar-core:0.7.3:jdk8"
+    quasar "co.paralleluniverse:quasar-core:0.7.3:jdk8"
 }
 
 run {
     systemProperty 'jmodern.name', 'Jack'
+    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}"
 }
 
 javadoc.options {
