Example of Actors. Though hot swap of code not working as expected

--- a/others/OCMJ/build.gradle
+++ b/others/OCMJ/build.gradle
@@ -3,9 +3,10 @@ apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'jmodern.Main5'
+mainClassName = 'jmodern.Main6'
 
 configurations {
+    System.out.println "SOMETHING:" + "${rootProject.projectDir}"
     markdownDoclet    
     quasar
 }
@@ -16,11 +17,13 @@ dependencies {
     markdownDoclet 'ch.raffael.pegdown-doclet:pegdown-doclet:1.1.1'
     
     compile "co.paralleluniverse:quasar-core:0.7.3:jdk8"
+    compile "co.paralleluniverse:quasar-actors:0.7.3"
     quasar "co.paralleluniverse:quasar-core:0.7.3:jdk8"
 }
 
-run {
+run {    
     systemProperty 'jmodern.name', 'Jack'
+    systemProperty "co.paralleluniverse.actors.moduleDir", "${rootProject.projectDir}/others/OCMJ/modules"
     jvmArgs "-javaagent:${configurations.quasar.iterator().next()}"
 }
 
