--- a/others/OCMJ/build.gradle
+++ b/others/OCMJ/build.gradle
@@ -6,7 +6,7 @@ sourceCompatibility = 1.8
 mainClassName = 'jmodern.Main6'
 
 configurations {
-    System.out.println "SOMETHING:" + "${rootProject.projectDir}"
+    //System.out.println "SOMETHING:" + "${rootProject.projectDir}"
     markdownDoclet    
     quasar
 }
