--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'integ-app'
 
-include 'integ-groovy-experiments', 'integ-java-experiments', 'integ-util', 'integ-web-app',
-        'integ-rest-web-app', 'others/OCMJ', 'bookex/bgnng-jee7'
+include 'integ-groovy-experiments', 'integ-java-experiments', 'integ-util',
+        'integ-domain-cmn', 'integ-domain-1',
+        'integ-web-app', 'integ-rest-web-app', 'others/OCMJ', 'bookex/bgnng-jee7'
 
