Created a new sub-project, Implemented few map-reduce programs from Hadoop In Action book.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'integ-app'
 
 include 'integ-groovy-experiments', 'integ-java-experiments', 'integ-util',
         'integ-domain-cmn', 'integ-domain-1',
-        'integ-web-app', 'integ-rest-web-app', 'others/OCMJ', 'bookex/bgnng-jee7'
+        'integ-web-app', 'integ-rest-web-app', 'others/OCMJ', 'bookex/bgnng-jee7',
+        'integ-hadoop-experiments'
 
